--- a/src/components/main/main.sass
+++ b/src/components/main/main.sass
@@ -37,4 +37,12 @@
             &.fa-file-pdf
               color: #a4302f
 
-
+// PANTALLA PHONE - EXTRA SMALL xs
+@media (max-width: 768px)
+  .main
+    .main-container
+      width: 100%
+      .name
+        font-size: 4em
+      .social-links
+        display: inline-block
